syntax = "proto3";

option csharp_namespace = "UtilityRateAPI.Grpc";

package utilityrate;

service UtilityRateService {
//  rpc GetById(GetUtilityRateRequest) returns (GetUtilityRateResponse);
  rpc CalculateTotalWithDetails (CalculateTotalRequest) returns (CalculateTotalResponse);
//  rpc CalculateTotal (CalculateTotalRequest) returns (CalculateTotalResponse);
}
enum UtilityType {
  WATER = 0;
  ELECTRIC = 1;
}
//message GetUtilityRateRequest {
//  string id = 1;
//}

message CalculateTotalRequest {
  UtilityType type  = 1;       
  double consumption = 2;  
}


message TierDetailGrpc {
  int32 tier = 1;
  int32 from = 2;
  int32 to = 3;
  double price = 4;
}


message CalculateTotalResponse {
  double total = 1;
  repeated TierDetailGrpc details = 2;
}

//message GetUtilityRateResponse {
//  string id = 1;        
//  string ownerId = 2;     
//  UtilityType type = 3;   
//  int32 tier = 4;       
//  int32 from = 5;         
//  int32 to = 6;          
//  double price = 7;       
//  string createdAt = 8;  
//  string updatedAt = 9;   
//}
